CodeMirror and Pretty Print issues with error dots in the editor and tooltips getting cut off

--- a/src/fauxton/assets/less/prettyprint.less
+++ b/src/fauxton/assets/less/prettyprint.less
@@ -36,3 +36,11 @@ pre.prettyprint {
     color: #666;
   }
 }
+.CodeMirror-wrap pre{
+  &.view-code-error{
+    color: @darkRed;
+  }
+  .tooltip{
+    z-index: 100000000;
+  }
+}
